# fin-coprocessorFirmata-sw

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  Makefile  README.md  makefile  repo.yml
.versionbot/: CHANGELOG.yml
device/EFR32BG1B/Include/: efr32bg1b_devinfo.h
examples/js/: README.md  adc.js  adxl345.js  balena.js  basic.js  blink.js  config.json  idac.js  package.json  sleep.js  testbot.js
firmata/: CMakeLists.txt
firmata/inc/: Boards.h
firmata/src/: Firmata.cpp  FirmataMarshaller.cpp
inc/: README.md
include/balena/: balena.h  version.h
include/firmata/: Boards.h  Firmata.h  FirmataConstants.h  FirmataParser.h
include/serial/: Serial.h
serial/: CMakeLists.txt
serial/src/: Serial.cpp
source/: StandardFirmata.cpp
source/protocol/balena/: balena.cpp
source/protocol/firmata/: FirmataParser.cpp
source/protocol/serial/: Serial.cpp
src/: CMakeLists.txt  Makefile  StandardFirmata.cpp
src/emdrv/: emdrv.cmake
src/emdrv/rtcdrv/config/: rtcdrv_config.h
src/emdrv/rtcdrv/src/: rtcdriver.c
src/include/balena/: balena.h  version.h
src/include/config/: balenaconfig.h  ble-configuration.h  board_features.h  bsp_bcp.h  bsphalconfig.h  hal-config-board.h
src/include/firmata/: Boards.h  FirmataMarshaller.h
src/include/serial/: Serial.h
src/source/: StandardFirmata.cpp
src/source/protocol/balena/: balena.cpp
src/source/protocol/firmata/: Firmata.cpp  FirmataMarshaller.cpp  FirmataParser.cpp
src/source/protocol/serial/: Serial.cpp
src/test/js/: package.json
src/toolchain/: version.cmake
test/js/: README.md  adxl345.js  balena.js  i2c.js  testbot.js
toolchain/: firmata.cmake  version.cmake  version.h.in
